--- a/src/main/webapp/resources/app/views/projects.html
+++ b/src/main/webapp/resources/app/views/projects.html
@@ -46,17 +46,15 @@
         <div class="row">
           <div class="large-6 columns">
             <label>TrialVerse namespace
-              <select ng-model="model.namespace" ng-options="tv.name for tv in trialverse"></select>
+              <select ng-model="model.namespace" ng-options="tv.namespace for tv in trialverse"></select>
             </label>
             <ul class="button-group">
               <li><a class="button small secondary" ng-click="createProjectModal.close()">Cancel</a></li>
               <li ng-show="model.choice != 'local'">
-                <a class="button small success" ng-disabled="!model.choice" ng-click="createProject(model)">Create
-                  project</a>
+                <a class="button small success" ng-disabled="!model.choice" ng-click="createProject(model)">Create project</a>
               </li>
               <li ng-show="model.choice == 'local'">
-                <a class="button small success" ng-disabled="!local.contents" ng-click="createProject(model)">Create
-                  project</a>
+                <a class="button small success" ng-click="createProject(model)">Create project</a>
               </li>
             </ul>
           </div>
