--- a/src/main/webapp/resources/app/views/projects.html
+++ b/src/main/webapp/resources/app/views/projects.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="columns">
-        <alert type="info">
+        <addis-alert type="info">
             <strong>Disclaimer:</strong>this is
             <em>beta</em>software. We store your projects on our servers. While we try our best to keep them secure and
             compatible with future versions, we can make no guarantees.
-        </alert>
+        </addis-alert>
     </div>
 </div>
 <div class="row">
