Message toast area WIP

--- a/src/main/webapp/resources/app/views/projects.html
+++ b/src/main/webapp/resources/app/views/projects.html
@@ -18,6 +18,7 @@
 
         <div>
             <a ui-sref="create-project" class="button "><i class="fa fa-plus"></i> Create project</a>
+            <button ng-click="addMessage()">Add Message</button>
         </div>
     </div>
 </div>
